# mlops_project_group_37

./: .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  dockerfiles.md  downloadKaggleDataset.sh  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_types.txt  sweep.yaml  tasks.py  test.event.json  test.txt  wandb sweep sweep_config.yaml
.github/workflows/: codecheck.yaml  integrationtests.yaml  stage_model.yaml  tests.yaml  unittests.yaml
configs/: config.yaml  default.yaml
configs/data/: default.yaml
configs/model/: bert_tiny.yaml
configs/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
configs/training/: default.yaml
configs/wandb/: default.yaml
data/: downloadKaggleDataset.sh
dockerfiles/: cloudbuild.yaml  dockerfiles.md  evaluate.dockerfile  train.dockerfile
docs/source/: index.md
lightning_logs/version_0/: metrics.csv
lightning_logs/version_3/: metrics.csv
lightning_logs/version_4/: metrics.csv
mlops_project_group_37/: README.md
mlops_project_group_37/dockerfiles/: api.dockerfile
mlops_project_group_37/docs/: mkdocs.yaml
mlops_project_group_37/tests/: test_data.py
reports/: README.md
src/tests/: mock_trainset.csv  test_data.py
src/tests/integrationtests/: test_apis.py
src/tests/performancetests/: locustfile.py  test_model.py
src/text_detect/: analysis.py  app.py  auto_register_best_model.py  data.py  evaluate.py  inference.py  link_model.py  link_to_registry.py  model.py  stage_best_model.py  train.py  trial.py  wandb_functions.py
tests/: mock_trainset.csv  test_data.py
(+63 files in other folders)
