[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "text_detect"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[[tool.mypy.overrides]]
module = ["transformers", "sklearn.model_selection"]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["src/tests/*"]
